--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 3.16)
 project(3dr)
 
 set(CMAKE_CXX_STANDARD 14)
-find_package(PCL 1.11 REQUIRED)
+find_package(PCL 1.2 REQUIRED)
+
 include_directories(${PCL_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
 add_definitions(${PCL_DEFINITIONS})
@@ -11,6 +12,14 @@ find_package(Boost COMPONENTS thread REQUIRED)
 
 
 
-add_executable(3dr main.cpp)
-target_link_libraries (3dr ${PCL_LIBRARIES})
-target_link_libraries(3dr ${Boost_LIBRARIES})
+add_executable(gp3 gp3.cpp)
+add_executable(Bspline Bspline.cpp)
+add_executable(convex convex.cpp)
+
+target_link_libraries(convex ${PCL_LIBRARIES})
+target_link_libraries(convex ${Boost_LIBRARIES})
+
+target_link_libraries (gp3 ${PCL_LIBRARIES})
+target_link_libraries(gp3 ${Boost_LIBRARIES})
+target_link_libraries (Bspline ${PCL_LIBRARIES})
+target_link_libraries(Bspline ${Boost_LIBRARIES})
